MueLu RefMaxwell: Fix reuse

--- a/packages/muelu/doc/UsersGuide/options_refmaxwell.tex
+++ b/packages/muelu/doc/UsersGuide/options_refmaxwell.tex
@@ -15,3 +15,5 @@
           
 \cbb{refmaxwell: ratio AH / A22 subcommunicators}{double}{1.0}{Ratio for the split into sub-communicators.}
           
+\cbb{refmaxwell: enable reuse}{bool}{false}{Prepare for solver reuse.}
+          
