--- a/packages/muelu/doc/UsersGuide/paramlist_hidden.tex
+++ b/packages/muelu/doc/UsersGuide/paramlist_hidden.tex
@@ -379,3 +379,5 @@ optimized neighbor discovery for Importer construction.}
         
 \cbb{refmaxwell: enable reuse}{bool}{false}{Prepare for solver reuse.}
         
+\cbb{refmaxwell: skip first (1,1) level}{bool}{true}{Skip the first level of the (1,1) hierarchy.}
+        
