--- a/packages/muelu/doc/UsersGuide/paramlist_hidden.tex
+++ b/packages/muelu/doc/UsersGuide/paramlist_hidden.tex
@@ -333,6 +333,8 @@
         
 \cbb{rap: fix zero diagonals threshold}{double}{0.}{Threshold at which diagonal entry is considered zero.}
         
+\cbb{rap: fix zero diagonals replacement}{double}{1.}{Replacement value for diagonal entries that are considered zero.}
+        
 \cbb{rap: shift}{double}{0.0}{Shift to use in the RAPShiftFactory}
         
 \cbb{rap: shift diagonal M}{bool}{false}{Shift for the RAPShiftFactory is stored as a
