MueLu RefMaxwell: Make nullspace normalization optional

--- a/packages/muelu/doc/UsersGuide/paramlist_hidden.tex
+++ b/packages/muelu/doc/UsersGuide/paramlist_hidden.tex
@@ -383,3 +383,5 @@ optimized neighbor discovery for Importer construction.}
         
 \cbb{refmaxwell: skip first (1,1) level}{bool}{true}{Skip the first level of the (1,1) hierarchy.}
         
+\cbb{refmaxwell: normalize nullspace}{bool}{false}{Normalize the nullspace.}
+        
